<resources>
    <string name="app_name">Meds</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Name for person who uses the app</string>
    <string name="nav_header_subtitle">Email for person who uses the app</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_meds">Meds</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_log_out">Log Out</string>

    <string name="update_string">Update/remove tool</string>

    <string name="add_id">Enter id</string>
    <string name="add_name">Enter name of the med</string>
    <string name="add_best_before">Enter best before</string>
    <string name="add_pieces">Enter number of meds in package</string>
    <string name="add_base_substance">Enter base substance</string>
    <string name="add_base_substance_quantity">Enter quantity of base substance</string>
    <string name="add_description">Enter description</string>
    <string name="add_user_email">Enter user</string>

    <string name="text_id">Id</string>
    <string name="text_name">Name</string>
    <string name="text_best_before">Best before</string>
    <string name="text_pieces">Number of meds</string>
    <string name="text_base_substance">Base substance</string>
    <string name="text_base_substance_quantity">Quantity of base substance</string>
    <string name="text_description">Description</string>

    <string name="label_best_before">Best before: </string>
    <string name="label_piece">Pieces: </string>
    <string name="label_base_substance">Base substance: </string>
    <string name="label_base_substance_quantity">Quantity: </string>
    <string name="label_description">Description: </string>

    <string name="button_cancel">Cancel</string>
    <string name="button_add">Add</string>
    <string name="button_remove">Delete</string>
    <string name="button_update">Update</string>


    <string name="refresh">Refresh</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="text_login">Log In Meds App</string>
    <string name="button_log_in">Log In</string>


    <string name="error_password">Password Error</string>
    <string name="home">Home</string>

</resources>
