<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_gallery"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/nav_meds"
        android:icon="@drawable/ic_menu_gallery"
        android:title="@string/menu_meds" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/menu_settings" />
    <item
        android:id="@+id/nav_contact"
        android:icon="@android:drawable/ic_menu_call"
        android:title="@string/menu_contact" />

    <item
        android:id="@+id/nav_log_out"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/menu_log_out" />

</menu>
