<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!--<com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:elevation="@dimen/toolbar_elevation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_hamburger"
            app:title="@string/home"
            app:titleTextColor="@color/colorPrimaryDark" />

    </com.google.android.material.appbar.AppBarLayout>-->

    <LinearLayout
        android:id="@+id/updateTool_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        >


        <TextView
            android:id="@+id/tool_title"
            android:text="@string/update_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            />

        <EditText
            android:id="@+id/id_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_id"
            android:inputType="textPersonName"
            android:visibility="gone"
            />


        <EditText
            android:id="@+id/name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_name"
            android:inputType="textPersonName"
            />


        <EditText
            android:id="@+id/best_before_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_best_before"
            android:inputType="textPersonName"
            />


        <EditText
            android:id="@+id/pieces_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_pieces"
            android:inputType="number"
            />


        <EditText
            android:id="@+id/base_substance_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_base_substance"
            android:inputType="textPersonName"
            />


        <EditText
            android:id="@+id/base_substance_quantity_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_base_substance_quantity"
            android:inputType="textPersonName"
            />


        <EditText
            android:id="@+id/description_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_description"
            android:inputType="textPersonName"
            />

        <LinearLayout
            android:id="@+id/buttons_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:id="@+id/update_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_update"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />

            <Button
                android:id="@+id/remove_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_remove"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_cancel"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />

        </LinearLayout>

    </LinearLayout>


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/meds_recyclerView"
            android:choiceMode="singleChoice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />



        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="276dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:layout_gravity="bottom|end"
            app:backgroundTint="@color/colorAccent"
            app:srcCompat="@android:drawable/ic_input_add" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
    <!--<include
            layout="@layout/activity_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />-->

    <!--<data class=".HomeBinding">

        <variable
            name="viewModel"
            type="com.example.medsapp.ui.home.HomeViewModel" />
    </data>-->



    <!--<com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />-->

</LinearLayout>



